<resources>
    <string name="str_turbo_cleaner">Social Cleaner</string>
    <string name="str_game_boost">Game Booster</string>
    <string name="str_battery_saver">Battery Saver</string>
    <string name="str_protect_now">Manage</string>
    <string name="str_private_browsing">Secure Browser</string>
    <string name="str_txt_antivirus">Find all the files stored on your device and organize them to recover huge space.</string>
    <string name="str_txt_cpu_cooler"> Advanced CPU temperature controller to reduce CPU usage and cool down the device.</string>
    <string name="str_arc_ram_abvtext">Memory Usage</string>
    <string name="str_space_available">Available Space</string>
    <string name="str_large_files">File Manager</string>
    <string name="str_backup">Backup</string>
    <string name="str_cpu_cooler_scan">Analyzing CPU Temperature</string>
    <string name="str_strnodup">No Duplicates Found</string>
    <string name="str_str_empty_compress">No Photo Selected</string>
    <string name="str_strtitledupmid">Duplicate photos occupy a lot of space on your device. Remove them to free up storage space &amp; organize gallery.</string>
    <string name="str_browsing">Any sites or pages you access here will be cleared immediately as you exit. All your search history, browsing history, and cookies will be not be stored here.</string>
    <string name="str_browser">Although, you cannot hide your browsing activities from your Internet Service Provider or the websites you visit. That means, you are not completely invisible.</string>
    <string name="str_title_activity_main4">Refer a Friend!</string>
    <string name="str_textempty">CPU Cooler uses standard temperature controlling technique that detects &amp; terminates processes that are heavy on resources to reduce CPU usage &amp; cool down the device.</string>
    <string name="str_permission_private">Please Grant External storage permission to continue.</string>
    <string name="str_gamespeedup">Boost Game Speed</string>
    <string name="str_game_experience">Add games here and run them faster.</string>
    <string name="str_cool_down_complete">Cool Down Completed</string>
    <string name="str_noti_cleaner">Notification Manager</string>
    <string name="str_freeupspace">Release Space</string>
    <string name="str_app_manager">Application Manager</string>
    <string name="str_otherdeali">Information &amp; Tools</string>
    <string name="str_duplicate">Duplicates Cleaner</string>
    <string name="str_scannig">Scanning…</string>
    <string name="scanning">Scanning</string>
    <string name="str_splashtext">Optimize Speed With Security</string>
    <string name="str_notfound_files">No Items Found</string>
    <string name="str_unable_toclean">
<![CDATA[ System Cache cannot be cleaned as it needs OS permission. <font color=\'#0387e3\'><b><u>Please clean</u></b></font> System Cache manually. ]]>
</string>
    <string name="str_delete_large_file">Are you sure you want to delete the selected item(s)? It cannot be recovered later.</string>
    <string name="str_describe">Feedback</string>
    <string name="str_note_txt">Please add appropriate screenshots (if any) to help us work on your issue quickly.\n\nNote: Screenshot size should not be more than %1$s.</string>
    <string name="str_invite_your">Help your friends optimize their device</string>
    <string name="str_share_your">Share the experience with your contacts &amp; invite them to try the app</string>
    <string name="str_msg_social">Great! Your device is free from unnecessary social junk.</string>
    <string name="str_morespacesmall">Space Saver</string>
    <string name="str_samllsecurity">Security</string>
    <string name="str_apporgenizer">Manage all the installed apps on your device from a single place.</string>
    <string name="str_device_detail">Device Information</string>
    <string name="str_tap_tocleanjunk">Tap to clean junk and recover space.</string>
    <string name="str_boostnow">Boost Now</string>
    <string name="str_recover">Free up</string>
    <string name="str_savenow">Save Now</string>
    <string name="str_viewandclean">Tap to review and clean.</string>
    <string name="str_check_dups">View Duplicates</string>
    <string name="str_check">Check</string>
    <string name="str_notnow">Not Now</string>
    <string name="str_download">Downloads</string>
    <string name="str_camera">Camera Roll</string>
    <string name="str_update">App Update Available!</string>
    <string name="str_update_avl">A newer version of TurboClean is available. We recommend to update the app.</string>
    <string name="str_scantype">Select Area of Scanning</string>
    <string name="str_camera_include">Find duplicate photos in your Camera Roll.</string>
    <string name="str_all_photos_include">Scan all photos on your device to find duplicates.</string>
    <string name="str_select_folder_include">Scan for duplicates in specific folders.</string>
    <string name="str_clearresult">Are you sure you want to go back? All scan results will be lost.</string>
    <string name="str_leave_page">Are you sure you want to leave this page? All scan results will be lost.</string>
    <string name="str_nogamesfound">Tap on a game to boost.</string>
    <string name="str_nogamesfounds">Tap on a game to boost.</string>
    <string name="str_nointernet">No Internet Connection Available!</string>
    <string name="str_ignorefilter">Exclude Apps</string>
    <string name="str_cpu_scan_txt">This will terminate CPU analyzing process.</string>
    <string name="str_social_scan_txt"> This will terminate scanning of social apps.</string>
    <string name="str_boost_scan_txt"> This will terminate phone boosting.</string>
    <string name="str_battery_scan_txt"> This will terminate battery boosting.</string>
    <string name="str_junk_scanning_txt"> This will terminate junk scanning.</string>
    <string name="str_junk_result_txt"> All scan results will be lost.</string>
    <string name="str_notfound_vidio">No Videos found on your device</string>
    <string name="str_notfound_photo"> No Photo(s) found on your device</string>
    <string name="str_notfound_document"> No Documents found on your device</string>
    <string name="str_notfound_audio"> No Audio files found on your device</string>
    <string name="str_notfound_data"> No data found on your device</string>
    <string name="str_noappstores">No apps available to restore.</string>
    <string name="str_noappsinsall">No downloaded apps available.</string>
    <string name="str_minimum_space">You\'re running low on storage. Free up at least %1$s to continue.</string>
    <string name="str_space_recover">Space Reclaimed</string>
    <string name="str_devies_cool_down">Phone Cooled Down</string>
    <string name="str_cleanonefolder">Deleted 1 Empty Folder</string>
    <string name="str_phoneboostsuccesful">Phone Boosted Successfully.</string>
    <string name="str_junkalreadyclean">Junk Cleaned Already</string>
    <string name="str_normaltempdevices">CPU temperature is in control.</string>
    <string name="str_notificationcleansuccessful">Notification(s) Cleared Successfully</string>
    <string name="str_search_url">Enter your search term</string>
    <string name="str_scan_for_duplicate">Find Duplicates</string>
    <string name="str_matchingleab">Matching Criteria</string>
    <string name="str_lovedit">Invite your friends along!</string>
    <string name="str_notification_deactivate">Notification Manager Disabled</string>
    <string name="str_after_upgrade_msg">Clean DO_NOT_TRANSLATE Empty Folders</string>
    <string name="str_mark">Photo(s) marked for deletion DO_NOT_TRANSLATE </string>
    <string name="str_storage_card" translatable="false">Memory card</string>
    <string name="str_runtime_permissions_txt" translatable="false">Please Grant External Storage Permission to Continue.</string>
    <string name="str_no_notification">There are no notifications</string>
    <string name="str_digital_footprints">Your browsing history has been cleared.</string>
    <string name="str_at_leastone">Please select at least one item</string>
    <string name="str_cant_delete">All photos of a set cannot be marked</string>
    <string name="str_game_boosted">Game optimized successfully. Launching…</string>
    <string name="str_nothindelete">No items found in the selected category</string>
    <string name="str_feedback_successful">Thanks for your valuable feedback</string>
    <string name="str_scan_games">Scan Games</string>
    <string name="str_scaning_games">Finding games on this device…</string>
    <string name="str_boosting">Optimizing…</string>
    <string name="str_please_wait">Please wait…</string>
    <string name="str_loading">Loading…</string>
    <string name="str_loading_apps">Loading apps…</string>
    <string name="str_backup_done">Backup of Selected App(s)\n Successfully Created</string>
    <string name="str_reinsatall_app">App is already installed. Do you want to reinstall the app?</string>
    <string name="str_delete_app_file">Are you sure you want to delete the selected backup file(s)?</string>
    <string name="str_pls_add_game_boost">Please select game(s) to speed up</string>
    <string name="str_no_new_game_found">No new games found.</string>
    <string name="str_searchiing_duplicate">Looking for duplicates…</string>
    <string name="str_noti_no_longer">Now, you won\'t see any notifications from</string>
    <string name="str_valid_mail">Please Enter a valid E-mail ID.</string>
    <string name="str_no_image_found_feedback">No Apps available to fetch Photo(s), kindly mail us at E-mail</string>
    <string name="str_lock">Lock Photo</string>
    <string name="str_unlock">Unlock Photo</string>
    <string name="str_ignore">Ignore Photo</string>
    <string name="str_autoStart">Installation successful. Allow the app to start automatically for optimal benefits.</string>
    <string name="str_action_settings">Settings</string>
    <string name="str_remove">Remove</string>
    <string name="str_delete">Delete</string>
    <string name="str_delete_junk">Clean Junk</string>
    <string name="str_info">Info</string>
    <string name="str_ok">OK</string>
    <string name="str_mark_all">Mark All</string>
    <string name="str_unmark_all">Unmark All</string>
    <string name="str_smart_selection">Smart Selection</string>
    <string name="str_congrats">Congratulations!</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_dont_show">Don\'t show this again</string>
    <string name="str_sort_by_name">Sort By Name</string>
    <string name="str_sort_by_size">Sort By Size</string>
    <string name="str_sort_by_date">Sort By Date</string>
    <string name="str_chngescan">Scan Settings</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="ads_experience">Get An Ads-Free Experience</string>
    <string name="ads_experience_tot">Get Unlimited access to all features with complete Ad-Free experience.</string>
    <string name="font_family_medium" translatable="false">sans-serif-medium</string>
    <string name="font_family_regular" translatable="false">sans-serif</string>
    <string name="font_family_thin" translatable="false">sans-serif</string>
    <string name="enter_answer">Enter your answer</string>
    <string name="cancel">Cancel</string>
    <string name="forget_password">Forgot Pattern ?</string>
    <string name="btn_confirm">Confirm</string>
    <string name="splash_text"><![CDATA[ APP <font color=\'#24befc\'><b>LOCKER</b></font>]]></string>
    <string name="send_code">Send Code to your secure Email</string>
    <string name="enter_code">Please Enter Reset Code</string>
    <string name="btn_reset">Reset Pattern</string>
    <string name="safeandsecure">Box Your Secrets!</string>
    <string name="other_option">Other Options</string>
    <string name="remove_app_str">Do you want to remove the shortcut?</string>
</resources>