<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.toolbar.MainActivity">

    <item
        android:id="@+id/action_mark"
        android:icon="@drawable/close"
        android:menuCategory="secondary"
        android:orderInCategory="2"
        android:title="@string/str_action_settings"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_automark"
        android:orderInCategory="1"
        android:title="@string/str_smart_selection"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_markall"
        android:orderInCategory="1"
        android:title="@string/str_mark_all"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_unmarkall"
        android:orderInCategory="2"
        android:title="@string/str_unmark_all"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/assistant"
        android:orderInCategory="3"
        android:title="@string/str_smart_selection"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settingscan"
        android:orderInCategory="4"
        android:title="@string/str_chngescan"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:title="@string/str_action_settings"
        android:visible="false"
        app:showAsAction="never" />
</menu>