<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splesh"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_splash_apc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/splash_logo_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/splesh_logo" />


        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:fontFamily="@string/font_family_thin"
            android:gravity="center"
            android:text="@string/splash_text"
            android:textColor="@color/white"
            android:textSize="@dimen/font_30" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2"
            android:fontFamily="@string/font_family_regular"
            android:gravity="center"
            android:text="@string/safeandsecure"
            android:textColor="@color/tab_text_color_sel"
            android:textSize="@dimen/font_20" />
    </LinearLayout>
</RelativeLayout>
