<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".purchase.PurchaseScreen"
    tools:showIn="@layout/activity_purchase_screen">

    <TextView
        android:id="@+id/tv_purc_head"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="@dimen/small_banner_size"
        android:text="@string/remove_ads"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_purc_head2"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_below="@id/tv_purc_head"
        android:textStyle="bold"
        android:text="@string/ads_experience"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_height="wrap_content" />


    <ImageView
        android:id="@+id/img_inapp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ad_free"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/tv_purc_btm"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_above="@id/btn_purchase"
        android:paddingLeft="@dimen/margin_16"
        android:paddingRight="@dimen/margin_16"
        android:text="@string/ads_experience_tot"
        android:layout_marginBottom="@dimen/small_banner_size"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_purchase"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_45"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginRight="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"
        android:background="@color/colorPrimaryDark"
        android:text="@string/str_delete_junk"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_18" />
</RelativeLayout>