<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_password_recover_set"
    android:layout_width="match_parent"
    android:background="@color/colorAccent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/forget_password" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:id="@+id/linear_center_layer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:background="@drawable/btn_bg"
            android:elevation="@dimen/margin_6"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_12"
                android:layout_marginRight="@dimen/margin_12"
                android:layout_marginTop="@dimen/margin_4">

                <EditText
                    android:id="@+id/edit_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/send_code"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/font_16" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/sendmailButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:fontFamily="@string/font_family_medium"
                android:padding="@dimen/margin_2"
                android:text="@string/send_code"
                android:textColor="@color/txt_blue"
                android:textSize="@dimen/font_16"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear_center_layer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_center_layer1"
            android:layout_margin="@dimen/margin_10"
            android:background="@drawable/btn_bg"
            android:elevation="@dimen/margin_6"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_12"
                android:layout_marginRight="@dimen/margin_12"
                android:layout_marginTop="@dimen/margin_4">

                <EditText
                    android:id="@+id/edit_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/enter_code"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/font_16" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/codeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:enabled="false"
                android:clickable="false"
                android:fontFamily="@string/font_family_medium"
                android:padding="@dimen/margin_2"
                android:text="@string/btn_reset"
                android:textColor="@color/tab_btn_txt"
                android:textSize="@dimen/font_16"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textoption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_center_layer2"
            android:gravity="center"
            android:padding="@dimen/margin_8"
            android:text="@string/other_option"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_16" />

        <LinearLayout
            android:id="@+id/linear_center_layer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textoption"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:background="@drawable/btn_bg"
            android:elevation="@dimen/margin_6"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/questionsSpinner"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="@dimen/margin_12"
                android:layout_marginRight="@dimen/margin_12"
                android:layout_marginTop="@dimen/margin_12"
                android:paddingBottom="@dimen/margin_8"
                android:paddingLeft="0dp"
                android:spinnerMode="dialog" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_12"
                android:layout_marginRight="@dimen/margin_12"
                android:layout_marginTop="@dimen/margin_4">

                <EditText
                    android:id="@+id/edt_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/enter_answer"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/font_16" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:background="@drawable/btn_bg"
                android:fontFamily="@string/font_family_medium"
                android:padding="@dimen/margin_10"
                android:text="@string/btn_confirm"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/font_14" />

        </LinearLayout>


    </RelativeLayout>


    <Button
        android:id="@+id/cancle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_10"
        android:background="@drawable/btn_green_round"
        android:fontFamily="@string/font_family_thin"
        android:padding="@dimen/margin_10"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="@dimen/font_18" />
</RelativeLayout>