<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/margin_20"
    android:layout_marginRight="@dimen/margin_20"
    android:background="@drawable/rounded_border_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_15"
        android:paddingTop="@dimen/margin_15"
        android:paddingRight="@dimen/margin_15"
        android:paddingBottom="@dimen/margin_15">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:srcCompat="@drawable/ic_congratulation" />

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_congrats"
            android:textColor="@color/txt_color"
            android:textSize="@dimen/font_20"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/dialog_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:gravity="center"
            android:text="@string/str_autoStart"
            android:textColor="@color/txt_color"
            android:textSize="@dimen/font_16" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chk_autostart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/str_dont_show"
            android:textColor="#404040"
            app:buttonTint="#404040" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_bg_left">

            <TextView
                android:id="@+id/ll_no_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/str_cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/font_16" />
        </LinearLayout>

        <View
            android:layout_width="0.25dp"
            android:layout_height="match_parent"
            android:background="#ccd8e1" />

        <LinearLayout
            android:id="@+id/ll_continue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_bg_right">

            <TextView
                android:id="@+id/ll_yes_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/str_ok"
                android:textColor="@color/white"
                android:textSize="@dimen/font_16" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>