<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B2B2B"
    android:orientation="vertical">
    <ImageView
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_7sdp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/_20sdp"
        android:src="@drawable/rounded_border_white"
        tools:ignore="ContentDescription" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:textSize="@dimen/_14sdp"
        android:text="@string/remove_app_str"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_height="@dimen/_40sdp">
        <TextView
            android:text="@string/cancel"
            android:background="@color/dark_txt"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <View
            android:layout_width="@dimen/_2sdp"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/_3sdp"
            android:background="@drawable/rounded_border_white"/>
        <TextView
            android:text="@string/str_remove"
            android:id="@+id/tv_remove"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:background="@color/dark_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

    </LinearLayout>

</LinearLayout>